# PinyClient

./: .gitignore  README.md  SNIPER_MQTT_REAL_LOOP.md  app.py  config.py  require.md  requirements.txt
backend/: README.md  mqtt_client.py
debug/: debug_video.py
models/: README.md  base.py  consts.py  message.py
models/protocol/: messages.proto  messages_pb2.py
protocol/: messages.proto  messages_pb2.py
reflex-cil/: .gitignore  README.md  requirements.txt  rxconfig.py  自定义客户端布局-native.html
reflex-cil/assets/: styles.css  video-player.js
reflex-cil/reflex_cil/: protocol_bridge.py  reflex_cil.py  video_server.py
service/: core_service.py  img_receiver.py  mqtt_client.py
service/sniper/: .gitignore  README.md  structure.md
service/sniper/.cache/clangd/index/: CameraParams.h.FD133289BD139FF9.idx  MvCameraControl.h.93A7E320F00609C3.idx  MvErrorDefine.h.120855AEB9100684.idx  PixelType.h.A413A5E8B1F9ECF0.idx  hik_camera_node.cpp.1248CB7550AD4516.idx
service/sniper/src/bringup/: package.xml
service/sniper/src/bringup/launch/: dual_camera.launch.py  sniper.launch.py
service/sniper/src/doorlock_stream_e2e/: CMakeLists.txt  package.xml
service/sniper/src/doorlock_stream_e2e/include/doorlock_stream_e2e/: config.hpp  packet_protocol.hpp  sniper_preprocessor.hpp
service/sniper/src/doorlock_stream_e2e/include/doorlock_stream_e2e/core/: frame_types.hpp  i_frame_sink.hpp
service/sniper/src/doorlock_stream_e2e/include/doorlock_stream_e2e/media/: gst_decoder_pipeline.hpp
service/sniper/src/doorlock_stream_e2e/include/doorlock_stream_e2e/sinks/: debug_display_sink.hpp
service/sniper/src/doorlock_stream_e2e/models/light_320/best_openvino_model/: best.xml  best.yaml
service/sniper/src/doorlock_stream_e2e/src/: gst_e2e_sender.cpp  mock_gateway.cpp  mqtt_test_receiver.cpp  sniper_preprocessor.cpp
service/sniper/src/doorlock_stream_e2e/src/media/: gst_decoder_pipeline.cpp
service/sniper/src/doorlock_stream_e2e/vision/detecor/: guide_light_detector.cpp
service/sniper/src/doorlock_stream_e2e/vision/detector/: guide_light_detector.cpp  guide_light_detector.hpp
service/sniper/src/doorlock_stream_ros2/: CMakeLists.txt  package.xml
service/sniper/src/doorlock_stream_ros2/src/: gst_receiver_node.cpp  gst_sender_node.cpp  topic_preview_node.cpp
service/sniper/src/hik_camera_ros2_driver/config/: camera_info.yaml  camera_params.yaml  camera_params_cam1_ros.yaml  camera_params_cam2_noros.yaml
service/sniper/src/hik_camera_ros2_driver/src/: hik_camera_node.cpp
static/css/: style.css
static/js/: components.js
templates/: index.html
templates/components/: clock.html  game_status.html  global_unit.html  robot_dynamic.html
tests/: test_mqtt.py
tools/: README.md  app_launcher.py  local_mqtt_video_sim.py  rm_cli.py  rm_command.py  rm_logger.py
tools/component/: rm_component_base.py  rm_component_manager.py  rm_components.py
